# Stock-Analysis-Tool

./: .env.example  .gitignore  IMPROVEMENTS.md  Main.py  README.md  app.py  pyproject.toml  requirements.txt  test_yfinance.py
.streamlit/: config.toml
src/: analysis.py  charts.py  data.py
styles/: main.css
